--- a/.github/workflows/python-apk.yml
+++ b/.github/workflows/python-apk.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requierements.txt
+        pip install -r requirements.txt
 
     - name: Set up Android SDK
       uses: android-actions/setup-android@v2
@@ -33,7 +33,7 @@ jobs:
 
     - name: Build with Flet
       run: |
-        flet build apk --product Test
+        flet build apk --product Test --description Test
 
     - name: Create Release
       uses: actions/upload-artifact@v2
